<resources>
    <string name="app_name">DdaatApp</string>
    <string name="signin">Sign in</string>
    <string name="user_id">User ID</string>
    <string name="enter_your_user_id">Enter your User ID</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="fg_pass">Forgot Password?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="splash_title">Title Goes Here</string>
    <string name="splash_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum porta ipsum</string>
    <string name="don_t_have_an_account_sign_up_here"><font color="#FFFFFF">Don’t have an account?</font><font color="#46CBE9"> Sign Up Here</font></string>
    <string name="have_an_account_sign_in_here"><font color="#FFFFFF">Already have an account?</font><font color="#46CBE9"> Sign in</font></string>
    <string name="skip">Skip</string>
    <string name="select_your">Select your Interested \nCategories</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="set_new_password">Set New Password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="forgot_your">Forgot your password? Enter your email address to Retrive the Password.</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_user_id">Create User Id</string>
    <string name="email_address_mobile">Email address /Mobile</string>
    <string name="enter_here">Enter here</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="user_name">User name</string>
    <string name="birth_year">Birth Year</string>
    <string name="enter_birth_year">Enter birth year</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <string name="type_other_gender">Type Other Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile_created_successfully">Profile created successfully</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="this_call_i">This call is routed outside\nthe application</string>
    <string name="continue_payment">Continue Payment</string>
    <string name="on_demand_v">On-demand videos subscription from</string>
    <string name="interactive">(interactive page with information)</string>
    <string name="subscriptio">Subscription detail</string>
    <string name="save_40">Save $40</string>
    <string name="plan_name">Plan Name</string>
    <string name="courses">Courses</string>
    <string name="streams">Streams</string>
    <string name="sessions">Sessions</string>
    <string name="home">Home</string>
    <string name="video_library">Videos</string>
    <string name="see_all_thi">See all things that we offer you</string>
    <string name="lorem_ipsum_article">Lorem Ipsum is simply dummy text</string>
    <string-array name="genderItems">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doler">$</string>
    <string name="take_behavi">Take Behavior Superpower \nSurvey Today</string>
    <string name="other">Other</string>
    <string name="select">Select</string>
    <string name="emergency_call_988">Emergency Call 988</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and">Lorem Ipsum is simply dummy text of the printing and.....</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="by_business_category">By Business Category</string>
    <string name="by_education_category">By Education Category</string>
    <string name="by_lifestyle_category">By Lifestyle Category</string>
    <string name="by_reviews">By Reviews</string>
    <string name="by_my_favorite">By My Favorite</string>
    <string name="joh451">Joh451</string>
    <string name="josephinearden_gmail_com">josephinearden@gmail.com</string>
    <string name="select_genres">Select Genres</string>
    <string name="upcoming_sessions">Upcoming Sessions</string>
    <string name="podcast_station">Podcast Station</string>
    <string name="ddaat_station">Ddaat Station</string>
    <string name="apply">Apply</string>
    <string name="r_amp_b"><![CDATA[R & B]]></string>
    <string name="my_profile">My Profile</string>
    <string name="profile_name">Joh451</string>
    <string name="term_and_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="past_sub_purchase">Past Sub Purchase</string>
    <string name="are_you_sure_you_want_n_logout">Are you sure you want \n Logout</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="type_your_feedback">Type your feedback</string>
    <string name="educational_tips">Educational Tips</string>
    <string name="user_experience">User Experience</string>
    <string name="customer_service">Customer Service</string>
    <string name="overall_service">Overall Service</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="related_video">Related Video</string>
    <string name="session">Session</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_watch_list">My Watch List</string>
    <string name="type_your_message">Type your message...</string>
    <string name="start_video">Start Video</string>
    <string name="request_session">Request Session</string>
    <string name="select_time">Select Time</string>
    <string name="add_date_and_time">Add Date and Time</string>
    <string name="type_here">Type here</string>
    <string name="reason">Reason</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="waiting_area">Waiting Area</string>
    <string name="join_session">Join Session</string>
    <string name="description">Description</string>
    <string name="note_title">Note Title</string>
    <string name="session_start_in">Session start in</string>
    <string name="note_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.

        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.

        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy.
    </string>
    <string name="about_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.

        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.
    </string>
    <string name="terms_and_condition_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.

        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.

        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.
    </string>
    <string name="privacy_policy_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.

        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.

        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type.
    </string>
    <string name="national_suicide_prevention_lifeline_at_988">National Suicide Prevention Lifeline at 988</string>
    <string name="if_you_think_you_may_have_a_medical_emergency_call_your_doctor_or">If you think you may have a medical emergency, call your doctor or</string>
    <string name="if_you_are_considering_suicide_or_have_a_plan_to_take_your_life_please_call">If you are considering suicide or have a plan to take your life, please call</string>
    <string name="if_you_are_in_a_state_of_crisis_please_contact_the_crisis_text_line_by_texting">If you are in a state of crisis, please contact the Crisis Text Line by texting</string>
    <string name="ddaat_app_declares_no_affiliation_sponsorship_nor_any_partnership_with_the_988_national_suicide_and_crisis_lifeline">DDAAT App declares no affiliation, sponsorship, nor any partnership with the 988 National Suicide and Crisis Lifeline.</string>
</resources>