<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_25_black_stroke_shape">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           android:paddingHorizontal="@dimen/_40dp"
            android:paddingVertical="@dimen/_20dp"
            android:layout_marginStart="@dimen/_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/check_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingHorizontal="@dimen/_10dp"/>
            <CheckBox
                android:id="@+id/check_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingHorizontal="@dimen/_10dp"/>
            <CheckBox
                android:id="@+id/check_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingHorizontal="@dimen/_10dp"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>