<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_black_stroke_card_shape">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="314dp"
        android:layout_height="415dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_15dp">
        <!--cancel button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@color/float_transparent"
            app:icon="@drawable/ic_cut"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142" />

        <!--heading-->
        <TextView
            android:id="@+id/textHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:fontFamily="@font/dm_sans_bold700"
            android:gravity="center"
            android:text="Sort By"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

        <!--filters-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_10dp"
            android:paddingStart="@dimen/_20dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_applyFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHeading">

            <CheckBox
                android:id="@+id/check_business"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="@dimen/_5dp"
                android:text="@string/by_business_category"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_education"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="@dimen/_5dp"
                android:text="@string/by_education_category"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="@dimen/_5dp"
                android:text="@string/by_lifestyle_category"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_newest"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="@dimen/_5dp"
                android:text="By Newest"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_reviews"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="@dimen/_5dp"
                android:text="@string/by_reviews"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_myFavorite"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="@dimen/_5dp"
                android:text="@string/by_my_favorite"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <!--Apply Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_applyFilter"
            style="@style/MyTextButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="@dimen/_16dp"
            android:text="@string/apply_filters"
            android:textSize="17sp"
            android:layout_marginBottom="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.172" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>