<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="333dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_black_stroke_card_shape"
    android:padding="@dimen/_15dp">

<!--cancel button-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/float_transparent"
        app:icon="@drawable/ic_close"
        app:iconSize="@dimen/_25dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

<!--Heading-->
    <TextView
        android:id="@+id/textHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_bold700"
        android:gravity="center"
        android:text="@string/this_call_i"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:textSize="22sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Call 911 text-->
    <TextView
        android:id="@+id/textEmergencyCall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_25dp"
        android:text="@string/if_you_think_you_may_have_a_medical_emergency_call_your_doctor_or"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textHeading"
        app:layout_constraintStart_toStartOf="@+id/textHeading"
        app:layout_constraintTop_toBottomOf="@+id/textHeading" />
<!--Button 988-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEmergencyCall"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_bg"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:fontFamily="@font/dm_sans_medium_500"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:onClick="onClick"
        android:paddingVertical="@dimen/_16dp"
        android:text="Emergency Call 911"
        android:layout_marginTop="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmergencyCall" />

    <!--Call 988 text-->
    <TextView
        android:id="@+id/text988Call"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15dp"
        android:text="@string/if_you_are_considering_suicide_or_have_a_plan_to_take_your_life_please_call"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEmergencyCall"
        app:layout_constraintStart_toStartOf="@+id/btnEmergencyCall"
        app:layout_constraintTop_toBottomOf="@+id/btnEmergencyCall" />
    <!--Button 988-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_988call"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:paddingVertical="@dimen/_10dp"
        android:backgroundTint="@color/blue_bg"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:onClick="onClick"
        android:fontFamily="@font/dm_sans_medium_500"
        android:text="@string/national_suicide_prevention_lifeline_at_988"
        android:layout_marginTop="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text988Call" />

    <!--Call 741 text-->
    <TextView
        android:id="@+id/text741Call"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15dp"
        android:text="@string/if_you_are_in_a_state_of_crisis_please_contact_the_crisis_text_line_by_texting"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_988call"
        app:layout_constraintStart_toStartOf="@+id/btn_988call"
        app:layout_constraintTop_toBottomOf="@+id/btn_988call" />
    <!--Button 741-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn741call"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_bg"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sp"
        android:fontFamily="@font/dm_sans_medium_500"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:onClick="onClick"
        android:paddingVertical="@dimen/_16dp"
        android:text="''HOME'' to 741-741"
        android:layout_marginTop="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text741Call" />

    <!--Call 988 text-->
    <TextView
        android:id="@+id/textNationalSuicideCall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15dp"
        android:text="@string/ddaat_app_declares_no_affiliation_sponsorship_nor_any_partnership_with_the_988_national_suicide_and_crisis_lifeline"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btn741call"
        app:layout_constraintStart_toStartOf="@+id/btn741call"
        app:layout_constraintTop_toBottomOf="@+id/btn741call" />
    <!--Button 988-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNationalSuicideCall"
        style="@style/MyTextButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:onClick="onClick"
        android:paddingVertical="@dimen/_16dp"
        android:text="Call National Suicide 988"
        android:layout_marginTop="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNationalSuicideCall" />


</androidx.constraintlayout.widget.ConstraintLayout>